--- a/content/blog/1.how-to-create-spotlight-card.md
+++ b/content/blog/1.how-to-create-spotlight-card.md
@@ -30,3 +30,7 @@ We will use tailwindcss to create a spotlight card. We will use the following co
   </div>
 </div>
 ```
+
+## How to customize the spotlight card?
+
+We can customize the spotlight card by changing the background color, text color, font size, font family, etc.
