--- a/content/blog/1.how-to-create-spotlight-card.md
+++ b/content/blog/1.how-to-create-spotlight-card.md
@@ -1,6 +1,6 @@
 ---
-title: "Title of the page"
-description: "meta description of the page"
+title: "How to create a spotlight card using tailwindcss"
+description: "In this article, we will learn how to create a spotlight card using tailwindcss."
 ---
 
 # How to create a spotlight card using tailwindcss
