--- a/content/blog/1.how-to-create-spotlight-card.md
+++ b/content/blog/1.how-to-create-spotlight-card.md
@@ -9,6 +9,8 @@ description: "In this article, we will learn how to create a spotlight card usin
 
 Spotlight card is a card that has a background image and a text on top of it. The text is usually a title and a description. The text is usually in the center of the card.
 
+<!-- more -->
+
 ## How to create a spotlight card?
 
 We will use tailwindcss to create a spotlight card. We will use the following code to create a spotlight card.
