--- a/content/blog/2.laravel-telescope-forbidden.md
+++ b/content/blog/2.laravel-telescope-forbidden.md
@@ -38,6 +38,9 @@ By structuring your header tags in this manner, you'll provide a clear and organ
 
 # How to Fix Laravel Telescope 403 Forbidden on Production
 
+::Toc
+::
+
 Laravel Telescope is an essential tool for debugging and monitoring your Laravel applications. However, when deploying your application to a production environment, you may encounter a 403 Forbidden error when trying to access Telescope. In this blog post, we'll explore the causes of this error and provide practical solutions for resolving it.
 
 ## Understanding the 403 Forbidden Error
@@ -59,7 +62,7 @@ When encountering the 403 Forbidden error with Laravel Telescope on production, 
 
     ```php
         Gate::define('telescope', function ($user) {
-            return in_array($user->email, [
+            return in_array($user->email, [  // [!code highlight]
                 '...',
             ]);
         });
