--- a/content/blog/1.how-to-create-spotlight-card.md
+++ b/content/blog/1.how-to-create-spotlight-card.md
@@ -1,4 +1,5 @@
 ---
+layout: blog-post
 title: "How to create a spotlight card using tailwindcss"
 description: "In this article, we will learn how to create a spotlight card using tailwindcss."
 ---
