--- a/content/blog/2.laravel-telescope-forbidden.md
+++ b/content/blog/2.laravel-telescope-forbidden.md
@@ -1,4 +1,5 @@
 ---
+layout: blog-post
 title: "Fixing Laravel Telescope 403 Forbidden Error: Production Solutions"
 description: "Learn how to fix the 403 Forbidden error in Laravel Telescope on production with practical tips and troubleshooting techniques."
 ---
