--- a/content/blog/1.why-you-should-not-use-global-state-composable-in-nuxt.md
+++ b/content/blog/1.why-you-should-not-use-global-state-composable-in-nuxt.md
@@ -11,21 +11,49 @@ Global state composables store data outside of request scopes, causing **uninten
 #### Example: Shared State Across Requests
 
 ```ts
-const count = ref(10);
+// app/composables/useCounter.ts
+
+const count = ref(0);
 
 export const useCounter = () => {
   const increment = () => count.value++;
+
   return { count, increment };
 };
 ```
 
+```vue
+<script setup lang="ts">
+const { count, increment } = useCounter();
+
+// Modify state on the server
+count.value++;
+</script>
+
+<template>
+  <div>
+    <div>Count: {{ count }}</div>
+    <Button @click="increment">Increment</Button>
+  </div>
+</template>
+```
+
 > If modified on the server, `count` persists across users, leading to state leakage.
+
+::component-wrapper
+::global-counter
+::
+::
+
+Try to reload the page couple of times. You will see that the counter is incremented multiple times.
 
 ---
 
 ### Inconsistent Behavior Between Server and Client
 
 Since global state is reused across requests, it behaves differently in SSR and client-side, causing hydration mismatches and unexpected resets.
+
+> You can try opening the dev tools and see hydration mismatches.
 
 ---
 
@@ -65,6 +93,11 @@ export const useCounter = () => {
   return { count, increment };
 };
 ```
+
+::component-wrapper
+::state-counter
+::
+::
 
 ### Use Pinia for Structured Global State
 
