--- a/content/blog/1.why-you-should-not-use-global-state-composable-in-nuxt.md
+++ b/content/blog/1.why-you-should-not-use-global-state-composable-in-nuxt.md
@@ -70,10 +70,12 @@ Global state can accumulate over time, leading to increased memory usage.
 #### Example: Memory Leak
 
 ```ts
+// app/composables/useFeed.ts
 const posts = ref([]);
 
 export const useFeed = () => {
   const addPost = (post) => posts.value.push(post);
+
   return { posts, addPost };
 };
 ```
@@ -87,9 +89,12 @@ If used globally, `posts` keeps growing across requests, consuming more memory.
 Ensures fresh state per request, preventing SSR issues.
 
 ```ts
+// app/composables/useCounter.ts
 export const useCounter = () => {
   const count = useState("count", () => 0);
+
   const increment = () => count.value++;
+
   return { count, increment };
 };
 ```
@@ -101,13 +106,17 @@ export const useCounter = () => {
 
 ### Use Pinia for Structured Global State
 
-Pinia ensures proper SSR state handling and avoids leakage.
+Pinia ensures proper SSR state handling and avoids memory leaks.
 
 ```ts
+// app/stores/counter.ts
 import { defineStore } from "pinia";
+
 export const useCounterStore = defineStore("counter", () => {
   const count = ref(0);
+
   const increment = () => count.value++;
+
   return { count, increment };
 });
 ```
