--- a/content/blog/1.why-you-should-not-use-global-state-composable-in-nuxt.md
+++ b/content/blog/1.why-you-should-not-use-global-state-composable-in-nuxt.md
@@ -45,15 +45,11 @@ count.value++;
 ::
 ::
 
-Try to reload the page couple of times. You will see that the counter is incremented multiple times.
-
 ---
 
 ### Inconsistent Behavior Between Server and Client
 
 Since global state is reused across requests, it behaves differently in SSR and client-side, causing hydration mismatches and unexpected resets.
-
-> You can try opening the dev tools and see hydration mismatches.
 
 ---
 
@@ -130,4 +126,4 @@ export const useCounterStore = defineStore("counter", () => {
 - **Difficult debugging**.
 - **Memory leaks**.
 
-✅ Instead, use `useState()` for scoped state or **Pinia** for structured state management. This ensures efficient, predictable state handling in Nuxt 3. 🚀
+✅ Instead, use [**useState()**](https://nuxt.com/docs/api/composables/use-state) for scoped state or [**Pinia**](https://pinia.vuejs.org/) for structured state management. This ensures efficient, predictable state handling in Nuxt 3. 🚀
