--- a/content/blog/1.why-you-should-not-use-global-state-composable-in-nuxt.md
+++ b/content/blog/1.why-you-should-not-use-global-state-composable-in-nuxt.md
@@ -1,3 +1,12 @@
+---
+title: Why You Should Not Use Global State Composable in Nuxt
+description: Using global state composables in Nuxt 3 may seem convenient, but they come with hidden pitfalls, especially in SSR (server-side rendering). Here’s why you should avoid them and what to use instead.
+ogImage:
+  component: HomePage
+  title: Why You Should Not Use Global State Composable in Nuxt
+  description: ""
+---
+
 # Why You Should Not Use Global State Composable in Nuxt
 
 Using global state composables in Nuxt 3 may seem convenient, but they come with hidden pitfalls, especially in SSR (server-side rendering). Here’s why you should avoid them and what to use instead.
