--- a/content/blog/2.correct-way-to-fetch-parallel-requests-in-nuxt.md
+++ b/content/blog/2.correct-way-to-fetch-parallel-requests-in-nuxt.md
@@ -1,3 +1,12 @@
+---
+title: The Right Way to Fetch Parallel Requests in Nuxt
+description: Learn how to fetch multiple APIs in parallel using Nuxt's `useAsyncData` and `Promise.all`. This approach ensures optimized, SSR-friendly, and efficient data fetching.
+ogImage:
+  component: HomePage
+  title: The Right Way to Fetch Parallel Requests in Nuxt
+  description: ""
+---
+
 # The Right Way to Fetch Parallel Requests in Nuxt
 
 When building a Nuxt application, you'll often need to fetch data from multiple APIs at the same time. A common approach is to use `Promise.all()` to run these requests in parallel, aiming for better performance.
