--- a/content/blog/1.why-you-should-not-use-global-state-composable-in-nuxt.md
+++ b/content/blog/1.why-you-should-not-use-global-state-composable-in-nuxt.md
@@ -5,6 +5,8 @@ ogImage:
   component: HomePage
   title: Why You Should Not Use Global State Composable in Nuxt
   description: ""
+createdAt: 2025-02-22
+updatedAt: 2025-02-23
 ---
 
 # Why You Should Not Use Global State Composable in Nuxt
