--- a/content/blog/2.correct-way-to-fetch-parallel-requests-in-nuxt.md
+++ b/content/blog/2.correct-way-to-fetch-parallel-requests-in-nuxt.md
@@ -5,6 +5,8 @@ ogImage:
   component: HomePage
   title: The Right Way to Fetch Parallel Requests in Nuxt
   description: ""
+createdAt: 2025-02-24
+updatedAt: 2025-02-24
 ---
 
 # The Right Way to Fetch Parallel Requests in Nuxt
